# Proiect-1-IEP-IV-CTI

./: CMakeCache.txt  CMakeLists.txt  Makefile  airport  cmake_install.cmake  company  main.cpp  proiect_iep.cbp
aeroport/: CMakeLists.txt  Makefile  cmake_install.cmake
aeroport/avion/: Makefile
aeroport/inc/: aeroport.h
aeroport/src/: aeroport.cpp  main.cpp
avion/: CMakeLists.txt  Makefile  cmake_install.cmake
avion/inc/: aripi.h  avion.h  avion_marfa.h  avion_pasageri.h  componenta.h  corp.h  motoare.h
avion/src/: aripi.cpp  avion.cpp  avion_marfa.cpp  avion_pasageri.cpp  corp.cpp  motoare.cpp
